main.css
* {
  font-family: monospace;
  margin: 0;
  padding: 0;
}

#topHalf{
  position: relative;
  width: 100%;
  height: 25%;
  background-color: rgb(224,58,62); /*official UMD red rgb*/
  text-align: center;
  display: table;
}
#menubar{
  display: table-cell;
  vertical-align: middle;
  font-size: 16px;
}
.social_icons {
  display: inline-block;
  padding-right: 10px;
  height: 50px;
  width: auto;
}
.social_icons:hover {
  transform: scale3d(1.03, 1.03, 1.03);
}
#bottomHalf{
  position: relative;
  width: 75%;
  height: 75%;
  background-color: white;
  margin: 0 auto;
}
#title {
  padding-top: 50px;
  text-align: center;
  font-size: 16px;
  top: 25%;
  padding-bottom: 20px;
}
#schoolImages {
  padding-top: 20px;
  text-align:center;
}
#CSLogo, #MathLogo {
  padding: 10px;
  height: 75px;
  width: auto;
}

#list {
  position: relative;
  display: inline-block;
  font-size: 18px;
  list-style-type: none;
  text-align: center;
}
#list li {
  float: left;
  padding: 10px 5px;
}
#list li a {
  color: black;
  text-decoration: none;
  padding: 2px 8px;
}
#list li a:hover, #list li a:active {
  box-shadow:
    0 .05em .25em 0 rgba(0,0,0, 0.3),
    inset 0 0 0 2em rgba(255,213,32, .5)
  ;
  border: none;
}

#name {
  padding-bottom: 20px;
}

/*----------Courses Style----------*/
#course_tables table, #course_tables td {
  font-size: 15px;
  border: 1px outset black;
  text-align: left;
  word-spacing: 1px;
}
#course_tables th{
  font-size: 15px;
  border: 1px outset black;
}

#course_tables tr:hover:not(.course_table_header), #botcamp_link, #math_research_link {
  color: rgb(255,213,32); /*official UMD gold rgb*/
}

#course_tables table {
  margin: 10px;
  display: inline-block;
}

#math_table_title, #cs_table_title {
  color: rgb(224,58,62); /*official UMD red rgb*/
  text-align: center;
}

#course_tables {
  display: table;
  position: relative;
  margin: 0 auto;

  top: 5%;
  text-align: center;
}
#CS_table, #MATH_table {
  display: inline-block;
}
/*----------Experience Style----------*/
#description {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;

  padding-top: 50px;
  line-height: 20px;
}
#viewMoreBelow {
  color: rgb(224,58,62); /*official UMD red rgb*/
  margin: auto;
  text-align: center;
  margin: 0 auto;
  padding-top: 40px;
  padding-bottom: 10px;

}
#internshipLogos {
  text-align: center;
  margin: 0 auto;
  width: 100%;
  display: table;
}
#LeidosLogo, #NASALogo {
  padding: 20px;
  height: auto;
  width: 40%;
  text-align: center;
}
#LeidosLogo:hover, #NASALogo:hover {
  transform: scale3d(1.05, 1.05, 1.05);
}
#linkToOtherJobs {
  padding-top: 20px;
  text-align: center;
}
#otherJobsLink:link, #otherJobsLink:visited {
  color: rgb(255,213,32); /*official UMD gold rgb*/
}
#otherJobsLink:hover, #botcamp_link:hover, #math_research_link:hover {
  color: rgb(224,58,62); /*official UMD red rgb*/
}
/*----------LeidosInternship & NASAInternship Style----------*/
#LeidosTitle, #NASATitle{
  padding-top: 50px;
  text-align: center;
  margin: 0 auto;
  padding-bottom: 20px;
}
#LeidosSymbol {
  display: block;
  margin: auto;
  padding-bottom: 0px;
}
#NASASymbol {
  display: block;
  margin: auto;
  padding-top: 20px;
  padding-bottom: 40px;
}
#LeidosDescription, #NASADescription {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;

  line-height: 20px;
}
/*----------OtherJobs Style----------*/
#OtherJobsTitle {
  text-align: center;
  padding-top: 50px;
}
/*#JobsTable td .jobTable_Image {
  width: 10px;
}*/
.jobTable_Image, .jobTable_Description{width: 26%;}
.jobTable_Position, .jobTable_Location, .jobTable_Date{width: 16%;}
.JobsTable_Images {width: 100%;}
#JobsTable {
  table-layout: fixed;
  padding-top: 20px;
  text-align: center;
  border: none;
  margin: 0 auto;
}
#JobsTable th, #JobsTable td {
  font-size: 15px;
  border: none;
  word-spacing: 0.5px;
  margin: 0 auto;
  padding-top: 10px;
  padding-bottom: 10px;
}
#JobsTable tr:hover {
  color: rgb(0,0,0);
}
/*----------Activities Style----------*/
.activity_description {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;

  padding-top: 50px;
  line-height: 20px;
}
.activityTitle{
  padding-bottom: 10px;
  word-spacing: 1px;
}
#UMDShirt_div{
  text-align: left;

  margin: 0 auto;
}
.UMDShirt {
  display: inline-block;
  position: relative;
  padding-top: 10px;
  height: auto;
  width: 100%;
}
#PME_certificate {
  display: inline-block;
  position: relative;
  padding-right: 10px;
  padding-top: 10px;
  height: auto;
  width: 25%;
}
#UMDShirt_front_caption, #UMDShirt_back_caption{
  padding-top: 5px;
  text-align: center;
}
#UMDShirt_front_container, #UMDShirt_back_container{
  display: inline-block;
  width: 13%;
  height: auto;
}

